Fixed issue with SystemEvent class, where a new Log instance was being created for each output line - instead of reused. Added a unique identifier string to every current request to the server. This allows to differenciate log messages for very close/overlapping requests. Fixed table locking issues with project logging. Unnecessary use of transactions. Feature: added manual building button to each project, in the dashboard. General tab in the dashboard has become Latest. Added a beta status disclaimer on the very first login after installation.

--- a/www/css/cintient.css
+++ b/www/css/cintient.css
@@ -7,6 +7,7 @@
 	http://cintient/project/history/css/new.css
 	http://cintient/project/edit/css/new.css
 	http://cintient/project/history/css/cintient.css
+	http://cintient/css/cintient.css
 */
 
 /* @group Top Bar */
@@ -476,6 +477,26 @@ user-select: none;
      with visibility or display - it seems sparkline.js doesn't play well
      with that. */
   color: transparent;
+  float: left;
+}
+
+#dashboard .build
+{
+  height: 20px;
+  padding-top: 3px;
+}
+
+#dashboard .build, #dashboard .build + .loading
+{
+  float: right;
+  margin-top: 0px;
+  display: none;
+}
+
+#dashboard .build + .loading
+{
+  margin-top: 3px;
+  margin-right: 15px;
 }
 
 #dashboard .projectRevision
